# fastrepl

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: ci.yaml  cmd_examples.yaml  deploy_docs.yaml  preview_docs.yaml  release.yaml
docs/: conf.py  index.rst
docs/advanced_usage/: dealing_with_bias.md  eval_domain_shift.md  eval_driven_development.md  human_eval.md  prompt_engineering.md
docs/basic_usage/: dataset_loading.md  eval_result.md  meta_eval.md  model_graded_eval.md
docs/getting_started/: concepts.md  design_goals.md  detailed_tutorial.ipynb  env.md  installation.md  model_graded_eval.md  observability.md  quickstart.ipynb  quickstart.md
docs/guides/: argilla.md  human_eval.ipynb  llama_index_pg_great_work.ipynb  meta_eval.md  model_graded_eval.md
docs/miscellaneous/: caching.md  observability.md  warnings_and_errors.md
examples/: anthropic_rlhf.ipynb  basic.ipynb  building_reference_ argilla.ipynb  chatgpt_classify_automated.ipynb  custom_eval.ipynb  langchain_agent.ipynb  launch_v0_1_0.ipynb  llama_index_instruct_embedding.ipynb  yelp_review.ipynb  yelp_review_basic.ipynb  yelp_review_classification.ipynb  yelp_review_consensus.ipynb  yelp_review_grading.ipynb  yelp_review_repl.ipynb
exp/: data_augmentation.ipynb  hf_qa_pipeline.ipynb  instruct_clustering.ipynb  instruct_qa.ipynb  korean_tokenizer.ipynb  langchain_agent.ipynb  llama_index_eval.ipynb  llama_index_instruct_embedding.ipynb  moderation.ipynb  tui.py  wandb.ipynb  widget.ipynb
fastrepl/: __init__.py  analyze.py  cache.py  context.py  errors.py  llm.py  pytest_plugin.py  repl.py  runner.py  warnings.py
fastrepl/cache/: __init__.py  disk.py  remote.py
fastrepl/context/: __init__.py  analyze.py  local.py  repl.py
fastrepl/eval/: __init__.py  base.py  evaluator.py
fastrepl/loop/: __init__.py  analyze.py  evaluator.py  repl.py  runner.py
fastrepl/polish/: __init__.py  updatable.py
fastrepl/repl/: __init__.py  context.py  polish.py
fastrepl/run/: __init__.py  cache.py  error.py  llm.py
fastrepl/utils/: __init__.py  context.py  data_structure.py  debug.py  ensure.py  env.py  graph.py  id.py  iterator.py  kappa.py  prompt.py  string.py
scripts/: space.sh
spaces/: README.md
tests/: conftest.py  task_runner.py  test_analyze.py  test_benchmark.py  test_context.py  test_eval.py  test_eval_metric.py  test_llm.py  test_polish.py  test_repl.py  test_utils.py
tests/benchmark/: test_updatable.py
tests/evaluation/: test_model_grade.py  test_runner.py  test_with_yelp_review.py
tests/integration/: test_llm.py  test_model_eval.py  test_model_grade.py
tests/unit/: test_analyze.py  test_cache.py  test_caching.py  test_context.py  test_eval_human.py  test_eval_metric.py  test_eval_model.py  test_eval_model_utils.py  (+8 more)
(+22 files in other folders)
