[tool.poetry]
name = "fastrepl"
version = "0.0.3"
description = "Fast Run-Eval-Polish Loop for LLM App"
authors = ["yujonglee <yujonglee.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
openai = "^0.27.8"
cohere = "^4.20.2"
tiktoken = "^0.4.0"
litellm = "^0.1.583"
gptcache = "^0.1.40"
evaluate = "^0.4.0"
cuid2 = "^2.0.0"
graphviz = "^0.20.1"
rich = {extras = ["jupyter"], version = "^13.5.2"}
iprogress = "^0.4"
ipywidgets = "^8.1.0"
scikit-learn = "^1.3.0"
sentence-transformers = "^2.2.2"
transformers = "^4.31.0"
torch = ">=2.0.0, !=2.0.1"
datasets = "^2.14.4"
backoff = "^2.2.1"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
pytest-xdist = "^3.3.1"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
mypy = "^1.5.0"
black = "^23.7.0"
python-dotenv = "^1.0.0"
html2text = "^2020.1.16"
nbconvert = "^7.7.3"
ipykernel = "^6.25.2"
pre-commit = "^3.4.0"

[tool.coverage.run]
omit = ["**/__init__.py"]

[tool.coverage.report]
exclude_also = [
    "import *",
    "@overload",
    "@abstractmethod",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.mypy]
exclude = [".venv"]
explicit_package_bases = "True"
ignore_missing_imports = "True"
enable_incomplete_feature = "Unpack"

[tool.pytest.ini_options]
markers = ["todo"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.entry-points.pytest11]
pytest-fastrepl = "fastrepl.pytest_plugin"
